--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
       <span id="eight">8</span>
       <span id="response"></span>
     </div>
-    <script src="/index.js"></script>
+    <script>
+      const getResponse = () => {
+        const responses = [
+          "It is certain",
+          "It is decidedly so",
+          "Without a doubt",
+          "Yes definitely",
+          "You may rely on it",
+          "As I see it, yes",
+          "Most likely",
+          "Outlook good",
+          "Yes",
+          "Signs point to yes",
+          "Reply hazy, try again",
+          "Ask again later",
+          "Better not tell you now",
+          "Cannot predict now",
+          "Concentrate and ask again",
+          "Don't count on it",
+          "My reply is no",
+          "My sources say no",
+          "Outlook not so good",
+          "Very doubtful",
+        ];
+        return responses[Math.floor(Math.random() * responses.length)];
+      };
+
+      const responseEle = document.getElementById("response");
+
+      document.getElementById("the-ball").addEventListener("click", () => {
+        setTimeout(() => {
+          if (Math.random() < 0.05) {
+            window.location.href = "https://chicory.co/error";
+          }
+          responseEle.innerText = getResponse();
+        }, 1000);
+      });
+    </script>
   </body>
 </html>
