--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         display: block;
         color: white;
         font-size: 2.5rem;
+        padding: 1rem;
+        background: rgb(6, 6, 93);
       }
     </style>
   </head>
